# filetalk

./: LICENSE  README.MD  main.py  pyproject.toml  setup.py
Documentation/: High level Design.drawio  process documentation.MD
homebrew /: filetalk.rb
notebooks/: meta_data_search.ipynb
src/: main.py  usage.py
src/filetalk/utils/: __init__.py  file_system_utils.py  model_utils.py
tests/: usual questions.md
tests/test_folder/: readme.md
tests/test_folder/Projects/: ReaDme.md
tests/test_folder/Projects/Fraud Analytics/: readme.MD
tests/test_folder/Projects/Recommender/: readme.md
tests/test_folder/Statistics/Bayesian Statistics/: readme.md
tests/test_src/: readme.md
tests/test_utils/: readme.md
utils/: file_system_utils.py
