[tool.poetry]
name = "filetalk"
version = "0.1.0"
description = "FileTalk simplifies your file searches in command line"
authors = ["Vijay Katta <vijaykatta3094@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"  # Specify the Python version you are using
numpy = "*"
sentence_transformers = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"  # Example development dependency

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
